--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-JavaScript Client-Side BIP0032 generator
+ORIGINAL:
 
 http://github.com/sarchar/brainwallet.github.com/tree/bip32
-
-- Web Worker hashes 50,000 rounds to protect passphrases
